--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,14 +6,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_Project/Levels/Dungeon.Dungeon
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/_Project/Levels/Dungeon.Dungeon
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/CryptRaider.CryptRaiderGameMode
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/_Project/BP_CryptRaiderGamemode.BP_CryptRaiderGamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
